@@ -24,16 +24,16 @@ repositories {
 
 dependencies {
     implementation 'org.apache.commons:commons-collections4:4.4'
-    implementation ('org.apache.commons:commons-dbcp2:2.11.0') {
+    implementation ('org.apache.commons:commons-dbcp2:2.12.0') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
     implementation 'commons-net:commons-net:3.10.0'
     implementation ('org.apache.httpcomponents:httpclient:4.5.14') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
-    implementation 'org.apache.logging.log4j:log4j-core:2.22.1'
+    implementation 'org.apache.logging.log4j:log4j-core:2.23.0'
     implementation 'com.oracle.database.jdbc:ojdbc10:19.22.0.0'
-    implementation 'org.springframework:spring-jdbc:6.1.3'
+    implementation 'org.springframework:spring-jdbc:6.1.4'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
