@@ -1,3 +1,6 @@
+Apr 11, 2024
+  CL ontology: updated to release v2024-04-05
+
 Feb 13, 2024
   CL ontology: updated to release v2024-02-13
 
